# smartsync-db-schema

./: .bumpversion.cfg  .dockerignore  .gitignore  AUTH_USER_REFACTORING_SUMMARY.md  Dockerfile  PLATFORM_MODELS_ARCHITECTURE.md  Role_Create_Flow.md  USER_MODEL_DIAGRAMS.md  base.py  db.py  pyproject.toml  requirements.txt  smart_sync_sb.md  walkthrough.md
academic-service/: alembic.ini  requirements.txt
administration-service/: alembic.ini  requirements.txt
analytics-service/: alembic.ini  requirements.txt
auth-service/: alembic.ini  requirements.txt
communication-service/: alembic.ini  requirements.txt
docs/: 01-DOMAIN-ANALYSIS.md  AUTH_USER_MODEL_ARCHITECTURE.md  PLATFORM-SERVICE-API-SPECIFICATION.md  PLATFORM_MODELS_ARCHITECTURE.md  README.md  SCHOOL-DATA-STORAGE-ARCHITECTURE.md  walkthrough.md
etc/: config.yaml
finance-service/: alembic.ini  requirements.txt
hostel-service/: alembic.ini  requirements.txt
hr-service/: alembic.ini  requirements.txt
library-service/: alembic.ini  requirements.txt
lms-service/: alembic.ini  requirements.txt
management-service/: alembic.ini  requirements.txt
media-service/: alembic.ini  requirements.txt
notification-service/: alembic.ini  requirements.txt
others/: subscription_plan copy.py
platform-service/: README.md  alembic.ini  requirements.txt
scripts/: MIGRATION-SYSTEM-ARCHITECTURE.md  MIGRATION-USAGE-GUIDE.md  bootstrap_services.sh  migrate.py  requirements.txt  seed_pricing.sql
security-service/: alembic.ini  requirements.txt
smartsync_db/: base.py
transport-service/: alembic.ini  (+1 more)
(+174 files in other folders)
