[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartsync_db"
version = "1.1.1"
description = "Shared SQLAlchemy models for SmartSync microservices"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["smartsync_db*"]
